# PdfTranslator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cc
controllers/: LoginController.cc  TranslateController.cc  TranslateController.h
deploy/: config.yaml  index.html  llm_config.json
deploy/llm/: vocab.txt
llm/: OpusModel.cpp  OpusModel.hpp  SentencePieceTokenizer.cpp  SentencePieceTokenizer.hpp
test/: CMakeLists.txt
